--- a/www/index.html
+++ b/www/index.html
@@ -23,11 +23,12 @@
 
     <!-- your app's js -->
     <script src="js/app.js"></script>
-    <script src="js/Controllers/DashController.js"></script>
+    <!--<script src="js/Controllers/DashController.js"></script>
     <script src="js/Controllers/AccountController.js"></script>
     <script src="js/Controllers/ChatController.js"></script>
-    <script src="js/Controllers/ChatDetailController.js"></script>
-     <script src="js/Controllers/LoginController.js"></script>
+    <script src="js/Controllers/ChatDetailController.js"></script>-->
+    <script src="js/Controllers/LoginController.js"></script>
+    <script src="js/Controllers/HomeController.js"></script>
     <!--<script src="js/Controllers/AccountController.js"></script>-->
 
     <script src="js/Services/services.js"></script>
