--- a/www/index.html
+++ b/www/index.html
@@ -4,48 +4,30 @@
     <meta charset="utf-8">
     <meta name="viewport" content="initial-scale=1, maximum-scale=1, user-scalable=no, width=device-width">
     <title></title>
-
     <link href="lib/ionic/css/ionic.css" rel="stylesheet">
     <link href="css/style.css" rel="stylesheet">
-    <link href="css/custom.css" rel="stylesheet">
+  </head>
+  <body>
 
-    <!-- IF using Sass (run gulp sass first), then uncomment below and remove the CSS includes above
-    <link href="css/ionic.app.css" rel="stylesheet">
-    -->
+    <div ng-app="lilotech">
 
-    <!-- ionic/angularjs js -->
+      <ion-pane ui-view>
+      <!-- Aqui se cargan los templates (HTML) que defines en app.routes.js -->
+      </ion-pane>
+      
+    </div>
+
     <script src="lib/ionic/js/ionic.bundle.js"></script>
     <script src="lib/angular-local-storage/dist/angular-local-storage.min.js"></script>
     <script src="lib/angular-resource/angular-resource.min.js"></script>
-
-    <!-- cordova script (this will be a 404 during development) -->
+    <script src="source/app.module.js"></script>
+    <script src="source/app.config.js"></script>
+    <script src="source/app.run.js"></script>
+    <script src="source/app.routes.js"></script>
     <script src="cordova.js"></script>
+    
+    <script src="source/components/login/LoginController.js"></script>
+    <script src="source/components/home/HomeController.js"></script>
 
-    <!-- your app's js -->
-    <script src="js/app.js"></script>
-    <!--<script src="js/Controllers/DashController.js"></script>
-    <script src="js/Controllers/AccountController.js"></script>
-    <script src="js/Controllers/ChatController.js"></script>
-    <script src="js/Controllers/ChatDetailController.js"></script>-->
-    <script src="js/Controllers/LoginController.js"></script>
-    <script src="js/Controllers/HomeController.js"></script>
-    <!--<script src="js/Controllers/AccountController.js"></script>-->
-
-    <script src="js/Services/services.js"></script>
-  </head>
-  <body ng-app="lilotech">
-    <!--
-      The nav bar that will be updated as we navigate between views.
-    -->
-    <!--<ion-nav-bar class="bar-stable">
-      <ion-nav-back-button>
-      </ion-nav-back-button>
-    </ion-nav-bar>-->
-    <!--
-      The views will be rendered in the <ion-nav-view> directive below
-      Templates are in the /templates folder (but you could also
-      have templates inline in this html file if you'd like).
-    -->
-    <ion-nav-view></ion-nav-view>
   </body>
 </html>
