--- a/www/index.html
+++ b/www/index.html
@@ -21,6 +21,7 @@
     <script src="lib/ionic/js/ionic.bundle.js"></script>
     <script src="lib/angular-local-storage/dist/angular-local-storage.min.js"></script>
     <script src="lib/angular-resource/angular-resource.min.js"></script>
+    <script src="lib/angular-jwt/dist/angular-jwt.min.js"></script>
 
     <!--Modulos,configuraciones, enrutadores-->
     <script src="source/app.module.js"></script>
@@ -32,6 +33,7 @@
     <!--Controladores-->
     <script src="source/components/login/LoginController.js"></script>
     <script src="source/components/home/HomeController.js"></script>
+
 
   </body>
 </html>
