Agregar login responsive y parte de la pantalla principal

--- a/www/source/shared/master/_navbarsub.html
+++ b/www/source/shared/master/_navbarsub.html
@@ -3,3 +3,8 @@
 	<h1 class="title">Hogar</h1>
 	<img src="img/martillo.png" class="img_head_right button button-clear">
 </div>
+<div class="bar bar-subheader" ng-if="!base.classHeader">
+	<div ng-repeat="element in base.elements track by $index" class="subitem" ng-class="element.class" ng-if="element.label !== ''">
+		{{element.label}}
+	</div>
+</div>
