--- a/www/index.html
+++ b/www/index.html
@@ -30,6 +30,7 @@
     <script src="source/app.routes.js"></script>
     <script src="cordova.js"></script>
     
+    <!--Controladores-->
     <script src="source/components/login/loginController.js"></script>
     <script src="source/components/home/homeController.js"></script>
   </body>
