--- a/www/index.html
+++ b/www/index.html
@@ -25,6 +25,7 @@
     <script src="lib/angular-local-storage/dist/angular-local-storage.min.js"></script>
     <script src="lib/angular-resource/angular-resource.min.js"></script>
     <script src="lib/angular-jwt/dist/angular-jwt.min.js"></script>
+    <script src="lib/ionic-toast/dist/ionic-toast.bundle.min.js"></script>
 
     <!--Modulos,configuraciones, enrutadores-->
     <script src="source/app.module.js"></script>
