Agregando el servicio para el consumo de la API

--- a/www/index.html
+++ b/www/index.html
@@ -38,6 +38,7 @@
     <script src="source/shared/generics/ApiService.js"></script>
     <script src="source/shared/generics/MockService.js"></script>
     <script src="source/components/login/LoginService_2.js"></script>
+    <script src="source/components/login/AuthService.js"></script>
     
     <!-- Controllers -->
     <!--<script src="source/components/login/LoginController.js"></script>-->
