--- a/www/source/shared/master/_navbar.html
+++ b/www/source/shared/master/_navbar.html
@@ -1,5 +1,6 @@
 <div class="bar bar-white bar-header" ng-class="base.classHeader">
-	<a href="#/login"><img src="img/icono_app_Android.png"  class="img_head_left button button-clear"></a>
+	<a href="#/login"><img src="img/icono_app_Android.png"  class="img_head_left button button-clear">
+	</a>
 	<h1 class="title">Hogar</h1>
 	<img src="img/martillo.png" class="img_head_right button button-clear">
 </div>
