--- a/www/source/shared/master/_navbarsub.html
+++ b/www/source/shared/master/_navbarsub.html
@@ -1,5 +1,5 @@
 <div class="bar bar-white bar-header" ng-class="base.classHeader">
-	<img src="img/icono_app_Android.png" class="img_head_left button button-clear">
+	<img src="img/icono_app_Android.png" class="img_head_left button button-clear" ng-click="base.onClickBack()">
 	<h1 class="title">Hogar</h1>
 	<img src="img/martillo.png" class="img_head_right button button-clear">
 </div>
