--- a/www/index.html
+++ b/www/index.html
@@ -21,32 +21,32 @@
       </div>
     </div>
     
-    <!--Librerias-->
+    <!-- Libs -->
     <script src="lib/ionic/js/ionic.bundle.js"></script>
     <script src="lib/angular-local-storage/dist/angular-local-storage.min.js"></script>
     <script src="lib/angular-resource/angular-resource.min.js"></script>
     <script src="lib/angular-jwt/dist/angular-jwt.min.js"></script>
     <script src="lib/ionic-toast/dist/ionic-toast.bundle.min.js"></script>
-    <!--<script src="lib/ionic-toast/src/ionic-toast.js"></script>-->
+    <script src="cordova.js"></script>
 
-    <!--Modulos,configuraciones, enrutadores-->
+    <!-- Module, Configuration, Routes -->
     <script src="source/app.module.js"></script>
     <script src="source/app.config.js"></script>
     <script src="source/app.run.js"></script>
     <script src="source/app.routes.js"></script>
-    <script src="cordova.js"></script>
+
 
     <!-- Services -->
     <script src="source/shared/generics/ApiService.js"></script>
     <script src="source/shared/generics/UtilService.js"></script>
-    <script src="source/shared/generics/ApiService2.js"></script>
     <script src="source/shared/generics/MockService.js"></script>
     <script src="source/components/login/LoginService.js"></script>
     <script src="source/components/login/AuthService.js"></script>
+    <script src="source/components/device/DeviceService.js"></script>
+    <script src="source/components/room/RoomService.js"></script>
 
     
     <!-- Controllers -->
-    <!--<script src="source/components/login/LoginController.js"></script>-->
     <script src="source/components/login/LoginController.js"></script>
     <script src="source/shared/master/BaseController.js"></script>
     <script src="source/components/home/HomeController.js"></script>
