--- a/www/source/shared/master/_navbarsub.html
+++ b/www/source/shared/master/_navbarsub.html
@@ -4,7 +4,7 @@
 	<img src="img/martillo.png" class="img_head_right button button-clear">
 </div>
 <div class="bar bar-subheader" ng-if="!base.classHeader">
-	<div ng-repeat="element in base.elements track by $index" class="subitem" ng-class="element.class" ng-if="element.label !== ''">
-		{{element.label}}
+	<div ng-repeat="room in base.rooms track by $index" class="subitem" ng-class="(base.idRoomSelected === room.Room.id ? 'activate' : '')">
+		{{room.Room.name}}
 	</div>
 </div>
