--- a/www/index.html
+++ b/www/index.html
@@ -19,6 +19,9 @@
 
       <div ui-view="home">
       </div>
+      <div ui-view="loading">
+      </div>
+
     </div>
     
     <!-- Libs -->
@@ -26,6 +29,7 @@
     <script src="lib/angular-local-storage/dist/angular-local-storage.min.js"></script>
     <script src="lib/angular-resource/angular-resource.min.js"></script>
     <script src="lib/angular-jwt/dist/angular-jwt.min.js"></script>
+    <script src="lib/angular-animate/angular-animate.min.js"></script>
     <script src="lib/ionic-toast/dist/ionic-toast.bundle.min.js"></script>
     <script src="cordova.js"></script>
 
