--- a/www/index.html
+++ b/www/index.html
@@ -35,6 +35,7 @@
     <script src="source/app.config.js"></script>
     <script src="source/app.run.js"></script>
     <script src="source/app.routes.js"></script>
+    <script src="source/app.filter.js"></script>
 
 
     <!-- Services -->
