--- a/www/index.html
+++ b/www/index.html
@@ -49,6 +49,7 @@
     <script src="source/components/login/AuthService.js"></script>
     <script src="source/components/device/DeviceService.js"></script>
     <script src="source/components/room/RoomService.js"></script>
+    <script src="source/components/toggle/ToggleService.js"></script>
 
     
     <!-- Controllers -->
