--- a/www/source/shared/master/_navbarsub.html
+++ b/www/source/shared/master/_navbarsub.html
@@ -3,8 +3,10 @@
 	<h1 class="title">Hogar</h1>
 	<img src="img/martillo.png" class="img_head_right button button-clear">
 </div>
+
+
 <div class="bar bar-subheader" ng-if="!base.classHeader">
-	<div ng-repeat="room in base.rooms track by $index" class="subitem" ng-class="(base.idRoomSelected === room.Room.id ? 'activate' : '')">
+	<div ng-repeat="room in base.rooms track by $index" class="subitem" ng-click="base.onClickDetail(room.Room.id)" ng-class="(base.idRoomSelected === room.Room.id ? 'activate' : '')">
 		{{room.Room.name | capitalize}}
 	</div>
 </div>
