--- a/www/index.html
+++ b/www/index.html
@@ -45,7 +45,7 @@
         <script src="source/components/login/AuthService.js"></script>
         <script src="source/components/device/DeviceService.js"></script>
         <script src="source/components/room/RoomService.js"></script>
-        <script src="source/components/toggle/ToggleService.js"></script>+
+        <script src="source/components/toggle/ToggleService.js"></script>
         <script src="source/shared/socket/SocketService.js"></script>
         
         <!-- Controllers -->
